Compressed background image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <style>
     body {
-      background-image: url('./img/splash.jpg');
+      background-image: url('./img/splash-min.jpg');
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
